# rsgridsynth

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: interface.rs
src/: common.rs  config.rs  diophantine.rs  grid_op.rs  gridsynth.rs  lib.rs  main.rs  math.rs  normal_form.rs  odgp.rs  region.rs  synthesis_of_clifford_t.rs  tdgp.rs  to_upright.rs  unitary.rs
src/ring/: d_omega.rs  d_root_two.rs  mod.rs  z_omega.rs  z_root_two.rs
tests/: integration_test.rs
